--- a/static/index.html
+++ b/static/index.html
@@ -13,12 +13,10 @@
 
 </body>
 <script>
-    var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-    L.tileLayer('https://a.tile.openstreetmap.org/${z}/${x}/${y}.png', {
-    attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-    maxZoom: 18,
-    tileSize: 512,
-    zoomOffset: -1,
-}).addTo(mymap);
+    var map = L.map('mapid', {
+    center: [ 48.745044, 9.106955],
+    zoom: 24
+});
+L.tileLayer('https://{s}.tile.openstreetmap.de/{z}/{x}/{y}.png?{foo}', {foo: 'bar', attribution: 'Map data &copy; <a href="https://www.openstreetmap.de/">OpenStreetMap</a> contributors, <a href="https://creativecommons.de/licenses/by-sa/2.0/">CC-BY-SA</a>'}).addTo(map);
 </script>
 </html>
